--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bacon/bacon-qr-code": "^3.0",
+        "laravel/fortify": "^1.32",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravolt/avatar": "^6.3",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "livewire/volt": "^1.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
